# Ariadne

./: README.md  logs.md  main.py  pyproject.toml  requirements.txt
modules/: Gemini_chat.py  NudgeEvent.py  chat-claude.py  cunhuopanduan.py  forward.py  poetry.py  qq_translator.py  qqmusic_time.py  setu.py  study_manager.py  who_at_me.py  zhunafa.py  历史上的今天.py  戳一戳处理.py
